--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,4 @@
-.site-nav .link, .contacts-link, .logo, .link-element, .footer-contacts .mail, .footer-contacts .telefon {
+.logo, .link-element, .footer-contacts .mail, .footer-contacts .telefon {
   text-decoration: none;
   display: block;
 }
@@ -20,7 +20,7 @@
   margin: 0;
 }
 
-.site-nav, .contacts, .main-container .buttons, .cards, .footer-contacts .address, .footer-sociallinks .list {
+.main-container .buttons, .cards, .footer-contacts .address, .footer-sociallinks .list {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -32,13 +32,6 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-}
-
-.site-nav .link, .contacts-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
 }
 
 .main-container .button, .main-container .first, .main-container .second, .main-container .third, .main-container .fourth, .main-container .fifth {
@@ -84,127 +77,53 @@ svg {
 }
 
 .page-header {
+  position: relative;
   background-color: #ffffff;
   border-bottom: 1px solid #eeeeee;
 }
 
 .header-container {
+  outline: darkmagenta;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .header-container {
+    width: 480px;
+  }
+}
+
 .nav-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 60px;
 }
 
 .site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.site-nav .item {
-  position: relative;
-}
-
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.site-nav .link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: #212121;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav .link:hover, .site-nav .link:focus {
-  color: #2196f3;
-}
-
-.site-nav .link::after {
-  position: absolute;
-  bottom: -1px;
-  border-radius: 2px;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  opacity: 0;
-  background-color: #2196f3;
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav .link.current {
-  color: #2196f3;
-}
-
-.site-nav .link.current::after {
-  opacity: 1;
-}
-
-.link:hover::after,
-.link:focus::after {
-  opacity: 1;
+  display: none;
 }
 
 .contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
-}
-
-.contacts .item + .item {
-  margin-left: 50px;
-}
-
-.contacts-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #757575;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contacts-link:hover, .contacts-link:focus {
-  color: #2196f3;
-}
-
-.contacts-icon {
-  fill: currentColor;
-}
-
-.contacts .icon-between {
-  margin-left: 10px;
+  display: none;
 }
 
 .logo {
   display: block;
-  margin-bottom: 20px;
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   color: #2196f3;
-  margin-right: 93px;
 }
 
 .logo-dark {
