--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,4 @@
 @import "./components/modal";
 @import "./components/button-list";
 @import "./components/card-list";
+@import "./components/menu-button";
