--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -27,7 +27,6 @@
 }
 
 .main-container, .footer .container {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -83,7 +82,7 @@ svg {
 }
 
 .header-container {
-  outline: darkmagenta;
+  outline: 1px solid red;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -93,6 +92,18 @@ svg {
 @media screen and (min-width: 480px) {
   .header-container {
     width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-container {
+    width: 1200px;
   }
 }
 
@@ -109,12 +120,16 @@ svg {
   min-height: 60px;
 }
 
-.site-nav {
-  display: none;
+@media screen and (max-width: 1199px) {
+  .site-nav {
+    display: none;
+  }
 }
 
-.contacts {
-  display: none;
+@media screen and (max-width: 1199px) {
+  .contacts {
+    display: none;
+  }
 }
 
 .logo {
