--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -5,32 +5,43 @@
 }
 
 .header-container {
-  // outline: darkmagenta;
+  outline: 1px solid red;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 
-  // @media screen and (min-width: 480px) {
-  //   width: 480px;
-  // }
+  // max-width: 1200px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  // nie rabotaet?
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 .nav-container {
-  outline: darkmagenta;
   display: flex;
   align-items: center;
   justify-content: space-between;
   min-height: 60px;
-
-  @media screen and (min-width: 480px) {
-    width: 480px;
 }
 
 .site-nav {
-  display: none;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
 
 .contacts {
-  display: none;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
